deny-all-rancher-demo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: rancher-demo
  egress: []
